--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "app.reyhoon.ir.reyhoon"
+        applicationId "app.reyhoon.ir"
         minSdkVersion 19
         targetSdkVersion 21
         versionCode 1
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.pixplicity.easyprefs:library:1.5'
 }
