--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.pixplicity.easyprefs:library:1.5'
+    compile 'com.jakewharton:butterknife:6.1.0'
 }
