--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.pixplicity.easyprefs:library:1.5'
     compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'com.android.support:recyclerview-v7:21.0.3'
 }
