--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.pixplicity.easyprefs:library:1.7'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.malinskiy:materialicons:1.0.2'
 }
