--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,6 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Fri Oct 09 15:18:52 IRST 2015
-#systemProp.http.proxyHost=
-#systemProp.http.proxyPort=1080
+#Tue Jun 21 08:18:16 IRDT 2016
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=8123
