--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="app.reyhoon.ir" >
+    package="app.bajiru.ir" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".MainAplication"
+        android:name="app.bajiru.ir.MainAplication"
         android:allowBackup="true"
         android:icon="@mipmap/bajiro"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".View.Activity.MainActivity"
+            android:name="app.bajiru.ir.View.Activity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
